# sag

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.lite.yml  docker-compose.yml  pricing-catalog.json
.github/workflows/: ci.yml  docs.yml
config/: example.lite.yaml  example.standard.yaml  test.cost.yaml  test.limits.yaml  test.memory.yaml  test.mock.yaml  test.standard.yaml
crates/gateway-api/: Cargo.toml
crates/gateway-api/src/: auth.rs  budget.rs  error.rs  lib.rs  logging.rs  metrics.rs  ratelimit.rs  reload.rs  server.rs  state.rs  tokens.rs
crates/gateway-api/src/routes/: health.rs  metrics.rs  mod.rs  proxy.rs
crates/gateway-api/src/routes/admin/: auth.rs  budgets.rs  cost.rs  keys.rs  logs.rs  mod.rs  providers.rs  routes_cfg.rs
crates/gateway-bin/: Cargo.toml
crates/gateway-bin/src/: main.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: config.rs  error.rs  lib.rs
crates/gateway-core/src/cache/: fingerprint.rs  mod.rs  payload.rs  policy.rs
crates/gateway-core/src/pricing/: calculator.rs  catalog.rs  mod.rs
crates/gateway-core/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/gateway-core/src/proxy/: engine.rs  executor.rs  fallback.rs  mod.rs  retry.rs  stream.rs
crates/gateway-core/src/security/: admin_auth.rs  credentials.rs  gateway_key.rs  master_key.rs  mod.rs
crates/gateway-storage/: Cargo.toml
crates/gateway-storage/src/: error.rs  lib.rs  models.rs  traits.rs
crates/gateway-storage/src/memory/: mod.rs
crates/gateway-storage/src/postgres/: logs.rs  metadata.rs  mod.rs
crates/gateway-storage/src/redis/: counter.rs  kv.rs  mod.rs
crates/gateway-storage/src/sqlite/: kv.rs  logs.rs  metadata.rs  mod.rs  pool.rs
docs/: book.toml
docs/src/: SUMMARY.md  admin-api.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  introduction.md  observability.md  proxy-api.md  security.md
migrations/postgres/: 20260514000001_init.sql
migrations/sqlite/: 20260514000001_init.sql
scripts/: mock-openai.py  run-lite.sh
