[workspace]
resolver = "2"
members = [
    "crates/gateway-core",
    "crates/gateway-storage",
    "crates/gateway-api",
    "crates/gateway-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["simple-ai-gateway contributors"]
rust-version = "1.85"

[workspace.dependencies]
# async runtime + http
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros", "http2"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "limit"] }
hyper = { version = "1.4", features = ["full"] }
http = "1.1"
http-body-util = "0.1"
bytes = "1.7"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"

# http client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "migrate", "chrono", "json"] }

# serialization / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# tracing / metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

# errors
thiserror = "1.0"
anyhow = "1.0"

# common
async-trait = "0.1"
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
once_cell = "1.20"
arc-swap = "1.7"
dashmap = "6.1"
argon2 = "0.5"
aes-gcm = "0.10"
subtle = "2.6"
jsonwebtoken = "9.3"
mime = "0.3"
moka = { version = "0.12", features = ["future"] }
governor = "0.7"
notify = "6.1"
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
zstd = { version = "0.13", default-features = false }
bincode = { version = "2.0", features = ["serde"] }

# internal crates
gateway-core = { path = "crates/gateway-core" }
gateway-storage = { path = "crates/gateway-storage" }
gateway-api = { path = "crates/gateway-api" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
