[package]
name = "gateway-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gateway-core.workspace = true
gateway-storage.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
arc-swap.workspace = true
once_cell.workspace = true
subtle.workspace = true
notify = { workspace = true }
dashmap.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
