[package]
name = "gateway-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
gateway-core.workspace = true
gateway-storage.workspace = true
gateway-api.workspace = true

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
arc-swap.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
