[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gateway-storage.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true

reqwest.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true

blake3.workspace = true
rand.workspace = true
arc-swap.workspace = true
once_cell.workspace = true
metrics.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
subtle.workspace = true
base64.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
